--- a/cpp04/ex01/Makefile
+++ b/cpp04/ex01/Makefile
@@ -13,6 +13,9 @@ NAME = polymorph
 
 all: $(NAME)
 
+%.o: %.cpp
+	$(CC) $(FLAGS) -c $< -o $@
+
 $(NAME): $(OBJ)
 	$(CC) $(FLAGS) $(OBJ) -o $(NAME)
 
