--- a/cpp04/ex00/Makefile
+++ b/cpp04/ex00/Makefile
@@ -14,6 +14,9 @@ NAME = polymorph
 
 all: $(NAME)
 
+%.o: %.cpp
+	$(CC) $(FLAGS) -c $< -o $@
+
 $(NAME): $(OBJ)
 	$(CC) $(FLAGS) $(OBJ) -o $(NAME)
 
